Fix for bug 48887 -- OpenURL apple event drops the last character of the URL. r=beard, sr=scc. Trunk checkin.